testing/implementing_gateway_controller_0/k8s_files/helloapp_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: davidanthonyvarley/fyp-hello-service:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 30080
