testing/implementing_gateway_controller_0/k8s_files/helloapp_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
spec:
  type: NodePort
  selector:
    app: hello-app
  ports:
  - port: 30080       # cluster port (can stay as is)
    targetPort: 30080  # container port in pod
